<resources>

    <string name="app_name">Wi-Fi Scanner</string>

    <string name="title_wifi">Wi-Fi Scanner</string>

    <string name="wifi">WiFi</string>
    <string name="label">標記</string>
    <string name="position">定位</string>
    <string name="setting">Setting</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_back">返回</string>
    <string name="action_scan_wifi">Wi-Fi Scan</string>

    <string name="disinfectionId">消毒車：</string>

    <string name="prompt_loading">Loading&#8230;</string>
    <string name="prompt_settings_not_implemented">Settings not implemented</string>
    <string name="prompt_enabling_wifi">Enabling Wi-Fi&#8230;</string>
    <string name="finish_label">完成標記</string>
    <string name="failed_label">未完成標記</string>

    <string name="welcome_title">Welcome to the WiFi Scanner!</string>
    <string name="welcome_message">This application is intended to scan nearby Wi-Fi base stations and give you basic information about each one.</string>

    <string name="station_frequency">%1$s MHz</string>
    <string name="station_level">%1$s dBm</string>
    recommend
    <string name="recommend">建議清單</string>
    <string name="building">大樓：</string>
    <string name="car">消毒車：</string>
    <string name="comfirm">確認送出</string>
    <string name="floor">樓層：</string>
    <string name="classroom">教室：</string>
    <string name="restart">再次標記</string>
    <string name="start">開始標記</string>
    <string name="locate">開始定位</string>
    <string name="finish">確認標記</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>