<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.LabelComponent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Switch
            android:id="@+id/test_switch"
            android:layout_width="335dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="29dp"
                android:text="@string/building"
                android:textSize="21sp"
                android:textColor="@color/colorLabel"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/building_spinner"
                android:layout_width="300dp"
                android:layout_height="54.38dp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="29dp"
                android:text="@string/floor"
                android:textSize="21sp"
                android:textColor="@color/colorLabel"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/floor_spinner"
                android:layout_width="300dp"
                android:layout_height="54.38dp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="MissingConstraints"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="29dp"
                android:text="@string/classroom"
                android:textSize="21sp"
                android:textColor="@color/colorLabel"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/classroom_spinner"
                android:layout_width="300dp"
                android:layout_height="54.38dp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="MissingConstraints"/>

        </LinearLayout>

        <Button
            android:id="@+id/label_btn"
            android:layout_width="300dp"
            android:layout_height="54.38dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/start"
            android:textSize="21sp"
            android:textColor="@color/colorLabel"
            android:background="@drawable/label_btn"/>

    </LinearLayout>

</FrameLayout>