<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="29dp"
                android:text="@string/building"
                android:textSize="21sp"
                android:textColor="@color/colorLabel"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/building_spinner"
                android:layout_width="300dp"
                android:layout_height="54.38dp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="29dp"
                android:text="@string/floor"
                android:textSize="21sp"
                android:textColor="@color/colorLabel"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/floor_spinner"
                android:layout_width="300dp"
                android:layout_height="54.38dp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="MissingConstraints"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="29dp"
                android:text="@string/classroom"
                android:textSize="21sp"
                android:textColor="@color/colorLabel"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/classroom_spinner"
                android:layout_width="300dp"
                android:layout_height="54.38dp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="MissingConstraints"/>

        </LinearLayout>
        <Button
            android:id="@+id/confirm"
            android:layout_marginTop="18dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/label_btn"
            android:text="@string/comfirm"
            android:textColor="@color/colorLabel"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>